2005-03-30  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Corrected my typo in the AppBundles backport.

2005-03-25  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Backport of AIDA Shinra's AppBundles symlink fix.
	* VirtPackage.pm: Backport of gcc* Homepage fix to all use #gcc2.

2005-03-20  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate.pm: backport of SF-cvs-username prompt.

2005-03-20  Daniel Macks  <dmacks@netspace.org>

	* Package.pm: backport of multiple-%e/same-%f msg fix

2005-03-07  Daniel Macks  <dmacks@netspace.org>

	* Notify/QuickSilver.pm: thought it was the Say module. Corrected
	to QuickSilver.

2005-03-07  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* PkgVersion.pm: remove app link in /Applications/Fink if it
	still exists.

2005-02-28  Justin F. Hallett  <thesin@users.sourceforge.net>

	* VirtPackage.pm: Added Growl 0.6 detection

2005-02-28  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Services.pm: Repair dumpinfo under perl 5.6 (thanks to Martin 
	Costabel for the fix)
	* PkgVersion.pm: Improved error message for buildlock failure.

2005-02-27  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Engine.pm: Enable BuildConflicts when running "fink install" (not
	just when running "fink build")

2005-02-27  Daniel Macks  <dmacks@netspace.org>

	* VirtPackage.pm: add Homepage to the install script failure for
	virtual packages.

2005-02-25  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: add DescDetail to the install script failure for
	virtual packages.

2005-02-25  Daniel Macks  <dmacks@netspace.org>

	* VirtPackage.pm: Make InstallScript output stand out better

2005-02-25  Daniel Macks  <dmacks@netspace.org>

	* Package.pm: More-compatible syntax for open().

2005-02-24  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: When a compile fails, point the user at the FAQ
	and mailing lists *before* having them e-mail the maintainer
	directly.
