@@ -1,3 +1,7 @@
+2005-04-11  Dave Morrison  <dmrrsn@users.sourceforge.net>
+
+	* PkgVersion.pm: add a default for CXXFLAGS for recent distributions
+
 2005-03-30  Daniel Macks  <dmacks@netspace.org>
 
 	* PkgVersion.pm: Corrected my typo in the AppBundles backport.
